[package]
name = "cynosure"
description = "High performance data structures & primitives from beyond the Blackwall"
version = "0.1.1"
edition = "2024"
license = "MIT"
authors = ["zk2u <zk2u@pm.me>"]
repository = "https://github.com/zk2u/cynosure"

[dependencies]

[dev-dependencies]
futures = "0.3.31"
monoio = "0.2.4"
criterion = { version = "0.5", features = ["html_reports"] }
tokio = { version = "1.0", features = ["sync", "rt"] }

[[bench]]
name = "localcell"
harness = false
path = "benches/localcell.rs"

[[bench]]
name = "queue"
harness = false
path = "benches/queue.rs"

[[bench]]
name = "mutex"
harness = false
path = "benches/mutex.rs"
