[package]
name = "cynosure"
description = "High performance data structures & primitives from beyond the Blackwall"
version = "0.2.3"
edition = "2024"
license = "MIT"
authors = ["zk2u <zk2u@pm.me>"]
repository = "https://github.com/zk2u/cynosure"

[features]
default = ["site_c", "site_d"]
# Hinting for CPU branch prediction
hints = []

# activates all site_c functionality
site_c = ["cell", "mutex", "queue", "rwlock"]
cell = []
mutex = ["cell", "queue", "hints"]
queue = ["hints"]
rwlock = ["cell", "queue", "hints"]

# activates all site_d functionality
site_d = ["ringbuf", "triplebuffer"]
ringbuf = ["hints"]
triplebuffer = ["hints", "futures"]

[dev-dependencies]
futures = "0.3.31"
monoio = "0.2.4"
criterion = { version = "0.5", features = ["html_reports"] }
tokio = { version = "1.0", features = ["sync", "rt"] }

[dependencies]
futures = {version = "0.3.31", optional = true}

[[bench]]
name = "scoped_cell"
harness = false
path = "benches/scoped_cell.rs"

[[bench]]
name = "queue"
harness = false
path = "benches/queue.rs"

[[bench]]
name = "mutex"
harness = false
path = "benches/mutex.rs"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(unstable)'] }
