[package]
name = "cynosure"
description = "High performance data structures & primitives from beyond the Blackwall"
version = "0.4.0"
edition = "2024"
license = "MIT"
authors = ["zk2u <zk2u@pm.me>"]
repository = "https://github.com/zk2u/cynosure"

[features]
default = ["site_c", "site_d"]
# Hinting for CPU branch prediction
hints = []

# activates all site_c functionality
site_c = ["mutex", "queue", "rwlock"]
mutex = ["queue", "hints"]
queue = ["hints"]
rwlock = ["queue", "hints"]

# activates all site_d functionality
site_d = ["ringbuf", "triplebuffer"]
ringbuf = ["hints"]
triplebuffer = ["hints", "futures"]

monoio-0_2 = ["dep:monoio"]

[dev-dependencies]
futures = "0.3.31"
monoio = "0.2.4"
criterion = { version = "0.5", features = ["html_reports"] }
tokio = { version = "1.0", features = ["sync", "rt"] }
parking_lot = "0.12"
crossbeam-channel = "0.5"

[dependencies]
futures = {version = "0.3.31", optional = true}
monoio = { version = "0.2.4", optional = true }

[[bench]]
name = "queue"
harness = false
path = "benches/queue.rs"

[[bench]]
name = "mutex"
harness = false
path = "benches/mutex.rs"

[[bench]]
name = "ringbuf_spsc"
harness = false
path = "benches/ringbuf_spsc.rs"

[[bench]]
name = "rwlock"
harness = false
path = "benches/rwlock.rs"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(unstable)'] }
